test/regress/cov6-amount-parse-too-many-periods.test
; Test parse error for too many periods in amount
; Covers amount.cc (no_more_periods error)

2024/01/01 Test
    Expenses:Food    1,234.56.78 USD
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food    1,234.56.78 USD
                   ^^^^^^^^^^^^^^^
Error: Too many periods in amount
end test
